fix the asyncronous problem when filtering the range dates
