# konto-verwaltung-ui/src/app/api-services/models.ts
@@ -1,8 +1,11 @@
 /* tslint:disable */
 /* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
 export { CurrencyExchangeRate } from './models/currency-exchange-rate';
 export { CurrencyExchangeRateId } from './models/currency-exchange-rate-id';
 export { MonthTotal } from './models/month-total';
 export { Rates } from './models/rates';
 export { Transaction } from './models/transaction';
 export { TransactionRequest } from './models/transaction-request';
+export { YearTotal } from './models/year-total';
