# konto-verwaltung-ui/src/app/api-services/models/currency-exchange-rate.ts
@@ -1,7 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
 import { CurrencyExchangeRateId } from '../models/currency-exchange-rate-id';
 export interface CurrencyExchangeRate {
   id?: CurrencyExchangeRateId;
+  lastUpdated?: string;
   rate?: number;
 }
