# konto-verwaltung-ui/src/app/api-services/models/year-total.ts
@@ -2,8 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface TransactionRequest {
-  date?: string;
-  description?: string;
-  value?: number;
+export interface YearTotal {
+  total?: number;
+  year?: number;
 }
